--- a/app/package.json
+++ b/app/package.json
@@ -4,14 +4,15 @@
   "license": "MIT",
   "idyll": {
     "theme": "default",
-    "layout": "centered",
+    "layout": "blog",
     "css": "styles.css",
     "authorView": false
   },
   "dependencies": {
+    "d3": "^4.0.0",
     "idyll": "^4.0.0",
     "idyll-d3-component": "^2.0.0",
-    "d3": "^4.0.0"
+    "styled-components": "^4.2.1"
   },
   "devDependencies": {
     "gh-pages": "^0.12.0"
