--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "d3": "^4.0.0",
     "idyll": "^4.0.0",
     "idyll-d3-component": "^2.0.0",
+    "poker-odds": "^1.0.1",
     "styled-components": "^4.2.1"
   },
   "devDependencies": {
